tests/baselines/reference/errorOnInitializerInObjectType.errors.txt
tests/cases/compiler/errorOnInitializerInObjectType.ts(2,17): error TS1246: An object type property cannot have an initializer.
tests/cases/compiler/errorOnInitializerInObjectType.ts(6,17): error TS1246: An object type property cannot have an initializer.


==== tests/cases/compiler/errorOnInitializerInObjectType.ts (2 errors) ====
    interface Foo {
        bar: number = 5;
                    ~
!!! error TS1246: An object type property cannot have an initializer.
    }
    
    var Foo: {
        bar: number = 5;
                    ~
!!! error TS1246: An object type property cannot have an initializer.
    };
    